Fixed PDF export layout, added theme functionality for colors and header alignment, fixed some bugs

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,6 +12,10 @@
   margin: 0;
 }
 
+body {
+  background-color: var(--CVBG);
+}
+
 .container {
   display: flex;
   align-items: center;
@@ -114,6 +118,18 @@
   top: 2rem;
 }
 
+.pdfButton {
+  border-radius: 5px;
+  border: 0px;
+  width: 3rem;
+  height: 2.5rem;
+  cursor: pointer;
+  background-color: transparent;
+  position: absolute;
+  right: 2rem;
+  top: 2rem;
+}
+
 .editIcon {
   height: 3rem;
   width: 3rem;
@@ -123,5 +139,17 @@
 }
 
 .editIcon:hover {
+  color: var(--secondary);
+}
+
+.pdfIcon {
+  height: 3rem;
+  width: 3rem;
+  cursor: pointer;
+  transition: all 0.1s ease;
+  color: var(--primary);
+}
+
+.pdfIcon:hover {
   color: var(--secondary);
 }
